--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tanstack/react-query": "^4.35.3",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-haptic-feedback": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
